@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 1.5.1 ChangeLog</title>
+		<title>Version 1.5.2 ChangeLog</title>
 		<style type="text/css">
 .auto-style1 {
 	text-decoration: underline;
@@ -10,7 +10,10 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse Waves-1.5.1</span>
+            <br /><span class="auto-style1">Pulse Waves-1.5.2</span>
+            <br />  Pulse_Waves-1.5.2
+            <br />  * Changed the CepoIndex in the command to a Hex value.
+            <br />
             <br />  Pulse Waves-1.5.1
             <br />   * Updated Prediction Model for Absorption, and Narrowband calculations.
             <br />
@@ -23,7 +26,10 @@
             <br />    - Updated the Prediction Model for power usage.
             <br />    - Added AutoUpdater when you click About.
             <br />
-            <br /><span class="auto-style1">RTI-3.4.7</span>
+            <br /><span class="auto-style1">RTI-3.4.8</span>
+            <br />   RTI-3.4.8
+            <br />   * In AdcpSubsystemCommands, changed the CepoIndex in the command to a Hex value.
+            <br />
             <br />   RTI-3.4.7
             <br />   * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
             <br />   * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
