@@ -1,5 +1,8 @@
 ﻿Pulse_Waves Changelog
 
+Pulse_Waves-1.5.2
+ * Changed the CepoIndex in the command to a Hex value.
+
 Pulse_Waves-1.5.1
  * Updated Prediction Model for Absorption, and Narrowband calculations.
 
